--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,15 @@
           </fieldset>
         </form>
       </section>
+      <h2>Example Usage:</h2>
+      <a
+        href="/api/shorturl/664545"
+      >
+        [this_project_url]/api/shorturl/664545
+      </a>
+
+      <h3>Will Redirect to:</h3>
+      <p>https://mzportfol.io/</p>
     </main>
     <footer>
       <p>By <a href="https://mzportfol.io">Marcello Zamora</a></p>
